--- a/plot_app/templates/header.html
+++ b/plot_app/templates/header.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Titillium+Web:700,400' rel='stylesheet' type='text/css'>
     <link href='https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.3/chosen.css' rel='stylesheet' type='text/css'>
-    <link href="plot_app/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="plot_app/static/css/font-awesome.min.css" rel="stylesheet">
-    <link href="plot_app/static/css/animate.min.css" rel="stylesheet">
-    <link href="plot_app/static/css/main.css" rel="stylesheet">
+    <link href="/plot_app/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/plot_app/static/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/plot_app/static/css/animate.min.css" rel="stylesheet">
+    <link href="/plot_app/static/css/main.css" rel="stylesheet">
 	
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
     integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
@@ -32,7 +32,7 @@
   <div class="navbar-brand">
 	  <h1>
 		  <a href="http://3dr.com">
-			  <img src="plot_app/static/images/logo.png" alt="logo">
+			  <img src="/plot_app/static/images/logo.png" alt="logo">
 		  </a>
 		  <span class="name">Flight Review</span>
 	  </h1>
@@ -44,21 +44,21 @@
 
   <div class="collapse navbar-collapse" id="navbar-collapse">
     <ul class="navbar-nav ml-auto">
-		<li class="nav-item"><a class="nav-link" href="upload">Upload</a></li>
+		<li class="nav-item"><a class="nav-link" href="/upload">Upload</a></li>
 {% if not is_plot_page %}
-		<li class="nav-item"><a class="nav-link" href="stats">Statistics</a></li>
+		<li class="nav-item"><a class="nav-link" href="/stats">Statistics</a></li>
 {% endif %}
-		<li class="nav-item"><a class="nav-link" href="browse">Browse</a></li>
+		<li class="nav-item"><a class="nav-link" href="/browse">Browse</a></li>
 
 {% if is_plot_page %}
 		<li class="nav-item dropdown" id="download-menu">
 			<a class="nav-link" data-toggle="dropdown" href="javascript:;">Download <i class="fa fa-angle-down"></i></a>
 			<div class="dropdown-menu">
-				<a class="dropdown-item" href="download?log={{ log_id }}">Log File</a>
-				<a class="dropdown-item" href="download?log={{ log_id }}&type=1" target="_blank">Parameters</a>
-				<a class="dropdown-item" href="download?log={{ log_id }}&type=3" target="_blank">Parameters (non-default)</a>
+				<a class="dropdown-item" href="/download?log={{ log_id }}">Log File</a>
+				<a class="dropdown-item" href="/download?log={{ log_id }}&type=1" target="_blank">Parameters</a>
+				<a class="dropdown-item" href="/download?log={{ log_id }}&type=3" target="_blank">Parameters (non-default)</a>
 {% if has_position_data %}
-				<a class="dropdown-item" href="download?log={{ log_id }}&type=2" target="_blank">KML Track</a>
+				<a class="dropdown-item" href="/download?log={{ log_id }}&type=2" target="_blank">KML Track</a>
 {% endif %}
 			</div>
 		</li>
