Add vehicle lifetime flight time to LogsGenerated table

--- a/plot_app/templates/browse_faa.html
+++ b/plot_app/templates/browse_faa.html
@@ -14,8 +14,9 @@ this script</a> for automated download of public log files.
             <tr>
                 <th data-toggle="tooltip" title="Unique vehicle identification">Drone ID</th>
                 <th data-toggle="tooltip" title="Vehicle model identification">UAS Model</th>
-                <th data-toggle="tooltip" title="Local time stamp at the start of a flight">Start Hours</th>
-                <th data-toggle="tooltip" title="Local time stamp at the end of a flight">End Hours</th>
+                <th data-toggle="tooltip" title="Local time stamp at the start of flight">Time</th>
+                <th data-toggle="tooltip" title="Airframe flight hours at start of flight">Start Hours</th>
+                <th data-toggle="tooltip" title="Airframe flight hours at end of flight">End Hours</th>
                 <th data-toggle="tooltip" title="Calculated time span of the flight">Flight Duration</th>
                 <th data-toggle="tooltip" title="<div>Tolerance criteria for Pass/Fail is:<ul><li>Aircraft follows predefined altitudes (+/- 10 ft)</li><li>Aircraft follows predefined flight track (+/- 10 ft)</li><li>Aircraft follow predefined speeds (+/- 2.5 mi/hr)</li><li>Aircraft lands at designated point (+/- 10 ft)</li></ul></div>">Flight Rating</th>
             </tr>
@@ -47,6 +48,7 @@ $(document).ready(function() {
         "columns": [
             null, // Drone ID
             {"orderable": false }, // UAS Model
+            null, // Start Time
             null, // Start Hours
             {"orderable": false }, // End Hours
             null, // Flight Duration
